[gd_scene load_steps=34 format=2]

[ext_resource path="res://scripts/player/player_main.gd" type="Script" id=1]
[ext_resource path="res://scripts/player/console.gd" type="Script" id=2]
[ext_resource path="res://assets/models/weapon/bottleblaster.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/player/movement.gd" type="Script" id=4]
[ext_resource path="res://scripts/player/fly.gd" type="Script" id=5]
[ext_resource path="res://assets/sound/player/jump/jump.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sound/player/walking/walking.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sound/atmosphere/atmosphere.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/font/pixel.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://assets/sound/player/typewriter/typewriter_sound.wav" type="AudioStream" id=10]
[ext_resource path="res://scripts/player/stamina.gd" type="Script" id=11]
[ext_resource path="res://scripts/player/console_inventory.gd" type="Script" id=12]
[ext_resource path="res://scripts/player/main-controls.gd" type="Script" id=13]
[ext_resource path="res://assets/textures/sky/AllSkyFree_Sky_MoonBurst_Equirect.png" type="Texture" id=14]
[ext_resource path="res://assets/models/weapon/crosshair.png" type="Texture" id=15]
[ext_resource path="res://assets/models/weapon/shot.png" type="Texture" id=16]
[ext_resource path="res://scripts/player/weapon.gd" type="Script" id=17]

[sub_resource type="PanoramaSky" id=53]
panorama = ExtResource( 14 )

[sub_resource type="Environment" id=52]
background_mode = 2
background_sky = SubResource( 53 )
background_energy = 0.7
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 1.06
glow_enabled = true
glow_intensity = 0.23
glow_strength = 1.29
glow_blend_mode = 1
glow_high_quality = true

[sub_resource type="Animation" id=27]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("stamina:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=28]
resource_name = "runningLock"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("stamina:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=24]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("RichTextLabel:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../PlayerCamera/type_writer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=25]
resource_name = "typewriter"
length = 4.021
tracks/0/type = "value"
tracks/0/path = NodePath("RichTextLabel:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../PlayerCamera/type_writer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="DynamicFont" id=29]
size = 15
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=45]
size = 12
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=46]
size = 9
font_data = ExtResource( 9 )

[sub_resource type="Theme" id=47]
default_font = SubResource( 46 )

[sub_resource type="DynamicFont" id=23]
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=54]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.144668, -0.131937, -0.134142 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -27.62, 98.434, -63.467 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite3D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=55]
resource_name = "shoot"
length = 0.56
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.145, -0.152261, -0.11 ), Vector3( 0.145, -0.027, 0.06 ), Vector3( 0.145, -0.152261, -0.11 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -27.62, 98.434, -63.467 ), Vector3( -27.62, 74.687, -56.073 ), Vector3( -27.62, 98.434, -63.467 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite3D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.0371257, 0.0934544, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0.626, 0.626, 0.626 ), Vector3( 0.626, 0.626, 0.626 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="CapsuleMesh" id=20]

[sub_resource type="SpatialMaterial" id=21]

[sub_resource type="BoxShape" id=4]

[node name="KinematicBody" type="KinematicBody"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.0126817, 3.69038, -0.000906352 )
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 52 )

[node name="main controls" type="Spatial" parent="."]
pause_mode = 2
script = ExtResource( 13 )

[node name="GUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stamina" type="Control" parent="GUI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -180.0
margin_top = -37.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stamina" type="ProgressBar" parent="GUI/Stamina"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.5
margin_top = -9.0
margin_right = 80.5
margin_bottom = 9.0
value = 50.0
percent_visible = false
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RunningLockAnim" type="AnimationPlayer" parent="GUI/Stamina"]
anims/RESET = SubResource( 27 )
anims/runningLock = SubResource( 28 )

[node name="screen_text" type="Control" parent="GUI"]
margin_top = 272.188
margin_right = 286.0
margin_bottom = 334.188
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="GUI/screen_text"]
autoplay = "typewriter"
anims/RESET = SubResource( 24 )
anims/typewriter = SubResource( 25 )

[node name="RichTextLabel" type="RichTextLabel" parent="GUI/screen_text"]
margin_left = 15.0
margin_top = 14.0
margin_right = 324.0
margin_bottom = 68.0
custom_fonts/normal_font = SubResource( 29 )
visible_characters = 0
percent_visible = 0.0
text = "Why do you keep coming back... You.. know its not safe, right?"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="console" type="Control" parent="GUI"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="GUI/console"]
margin_right = 216.0
margin_bottom = 71.0
color = Color( 0, 0, 0, 0.788235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_fps" type="RichTextLabel" parent="GUI/console"]
margin_left = 4.0
margin_top = 2.0
margin_right = 86.0
margin_bottom = 17.0
custom_fonts/normal_font = SubResource( 45 )
text = "FPS: null"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_movement" type="RichTextLabel" parent="GUI/console"]
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 11.0
margin_right = 155.0
margin_bottom = -12.0
custom_fonts/normal_font = SubResource( 45 )
text = "Movement: null"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_fov" type="RichTextLabel" parent="GUI/console"]
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 20.0
margin_right = 160.0
margin_bottom = -5.0
custom_fonts/normal_font = SubResource( 45 )
text = "FOV: null"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_contact" type="RichTextLabel" parent="GUI/console"]
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 28.0
margin_right = 260.0
margin_bottom = 3.0
custom_fonts/normal_font = SubResource( 45 )
text = "Has contact(RayCast): null"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_onfloor" type="RichTextLabel" parent="GUI/console"]
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 37.0
margin_right = 160.0
margin_bottom = 12.0
custom_fonts/normal_font = SubResource( 45 )
text = "Is on floor: null"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_position" type="RichTextLabel" parent="GUI/console"]
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 46.0
margin_right = 160.0
margin_bottom = 22.0
custom_fonts/normal_font = SubResource( 45 )
text = "Position: null"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_speed" type="RichTextLabel" parent="GUI/console"]
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 55.0
margin_right = 160.0
margin_bottom = 31.0
custom_fonts/normal_font = SubResource( 45 )
text = "Speed: null"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="GUI/console"]
margin_top = 79.0
margin_right = 217.0
margin_bottom = 139.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="GUI/console/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.583
margin_top = 16.2273
margin_right = -9.417
margin_bottom = -3.77274
theme = SubResource( 47 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inventory" type="RichTextLabel" parent="GUI/console/Panel"]
margin_left = 5.0
margin_top = 1.0
margin_right = 87.0
margin_bottom = 16.0
custom_fonts/normal_font = SubResource( 45 )
text = "inventory
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="crosshair" type="Control" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="GUI/crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
texture = ExtResource( 15 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause" type="Control" parent="GUI"]
visible = false
margin_left = -16.0
margin_top = -10.0
margin_right = 270.0
margin_bottom = 234.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="GUI/pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -4157.0
margin_top = -2014.0
margin_right = 2697.0
margin_bottom = 1568.0
color = Color( 0, 0, 0, 0.831373 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="GUI/pause"]
margin_left = 34.0
margin_top = 19.0
margin_right = 96.0
margin_bottom = 51.0
custom_fonts/normal_font = SubResource( 23 )
text = "PAUSED"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerCamera" type="Camera" parent="."]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0.088, 3.028, 0.120761 )

[node name="Hand" type="Spatial" parent="PlayerCamera"]
script = ExtResource( 17 )

[node name="bottleblaster" parent="PlayerCamera/Hand" instance=ExtResource( 3 )]
transform = Transform( 0.0140884, -0.0137333, 0.0358148, -0.032393, 0.0161739, 0.0189443, -0.0205426, -0.0349226, -0.00531039, 0.144668, -0.131937, -0.134142 )

[node name="Sprite3D" type="Sprite3D" parent="PlayerCamera/Hand/bottleblaster"]
transform = Transform( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0.0277252, 6.26431, 0.023571 )
texture = ExtResource( 16 )

[node name="shoot-animation" type="AnimationPlayer" parent="PlayerCamera/Hand/bottleblaster"]
anims/RESET = SubResource( 54 )
anims/shoot = SubResource( 55 )

[node name="type_writer" type="AudioStreamPlayer3D" parent="PlayerCamera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0038817, 0.0496056, -0.955405 )
stream = ExtResource( 10 )
unit_db = 16.0

[node name="FovTween" type="Tween" parent="PlayerCamera"]

[node name="RayCastWeapon" type="RayCast" parent="PlayerCamera"]
cast_to = Vector3( 0, 0, -10 )

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.30804, 0 )
enabled = true
cast_to = Vector3( 0, -0.6, 0 )
collide_with_areas = true

[node name="PlayerMovement" type="Spatial" parent="."]

[node name="Movement" type="Spatial" parent="PlayerMovement"]
script = ExtResource( 4 )

[node name="Fly" type="Spatial" parent="PlayerMovement"]
script = ExtResource( 5 )

[node name="PlayerMesh" type="MeshInstance" parent="."]
transform = Transform( 0.75, 0, 0, 0, 0, -2.59, 0, 0.75, 0, 0.0878795, 0.755081, 0 )
visible = false
mesh = SubResource( 20 )
material/0 = SubResource( 21 )

[node name="HitBox" type="CollisionShape" parent="."]
transform = Transform( 0.75, 0, 0, 0, 0, -2.59, 0, 0.75, 0, 0.0878795, 0.755081, 0 )
shape = SubResource( 4 )

[node name="Audio" type="Spatial" parent="."]

[node name="jump" type="AudioStreamPlayer3D" parent="Audio"]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0 )
stream = ExtResource( 6 )

[node name="walking" type="AudioStreamPlayer3D" parent="Audio"]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0 )
stream = ExtResource( 7 )
unit_db = -16.335
pitch_scale = 0.67
max_distance = 10.0

[node name="atmosphere" type="AudioStreamPlayer3D" parent="Audio"]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0.264788, -1.19209e-06, -0.0169277 )
stream = ExtResource( 8 )
unit_db = -9.1
max_db = -14.15
autoplay = true

[node name="player light" type="OmniLight" parent="."]

[node name="bottle light" type="OmniLight" parent="."]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 1.02727, 2.7764, -2.14983 )
light_energy = 0.706
omni_range = 0.116
